update for front

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,6 +21,6 @@
 
 <div>
   Device Info:
-  Model: {{ device.model }}
-  Version: {{ device.version }}
+  Model: {{ device['model'] }}
+  Version: {{ device['version'] }}
 </div>
