--- a/src/pages/forum/post-create/post-create.html
+++ b/src/pages/forum/post-create/post-create.html
@@ -1,13 +1,12 @@
 <h2>Create a Post</h2>
   <div style="color: darkred;">{{ postError }}</div>
-  <form [formGroup]=" postFormGroup " (ngSubmit)="onSubmitPostForm()">
-<div *ngIf=" categories ">
-  <span *ngFor=" let c of categories; let i = index; ">
-    <input type="checkbox" value="{{ c.id }}" (change)=" onChangePostFormCategory( $event ) "> {{ c['name'] }}
-  </span>
+<div *ngIf=" dbCategories ">
+  <label *ngFor=" let c of dbCategories; let i = index; ">
+    <input type="checkbox" value="{{ c.id }}" name="categories" [(ngModel)]="categories[c.id]"> {{ c['name'] }}
+  </label>
 </div>
-    <div>Subject: <input formControlName="subject"></div>
-    <div><textarea formControlName="content" cols="40" rows="4" placeholder="Please input content"></textarea></div>
+    <div>Subject: <input name="subject" [(ngModel)]="subject"></div>
+    <div><textarea name="content" [(ngModel)]="content" cols="40" rows="4" placeholder="Please input content"></textarea></div>
     <div>File/Photo Upload: <input type="file"></div>
     <div>
       Options:
@@ -15,6 +14,6 @@
   <input type="checkbox" [(ngModel)]=" postForm.sticky_all_forum "> Sticky on all forums.-->
     </div>
     <div>
-      <button >Submit Post</button>
+      <button (click)="onSubmitPostForm()">Submit Post</button>
     </div>
-  </form>
+    
