update for login

--- a/src/pages/forum/post-edit/post-edit-modal-content.html
+++ b/src/pages/forum/post-edit/post-edit-modal-content.html
@@ -24,5 +24,7 @@
     <div>
         <button type="submit">Post</button>
     </div>
+
+    <div *ngIf="error" class="alert alert-warning">{{error}}</div>
     
 </form>
