--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,23 +1,17 @@
-<h1>Profile</h1>
+<h1>Register</h1>
 
 <button type="button" routerLink="/">Go to Home</button>
 
 <hr>
 
-<div *ngIf=" app.user.isLogout ">
-  You are not logged in.
-</div>
-<div *ngIf=" app.user.isPending ">
-  <i class="fa fa-spinner fa-spin" aria-hidden="true"></i> Loading profile ...
+<div *ngIf="app.user.isLogin">
+  <h2>You are already logged in</h2>
 </div>
 
 
+<div *ngIf=" error ">{{ error }}</div>
 
-<section *ngIf=" app.user.isLogin && profile " class="profile-content">
-
-  <div *ngIf=" error ">{{ error }}</div>
-
-
+<section class="profile-content">
   <div *ngIf=" profile ">
     You have logged in with {{ profile?.providerId }}<br>
     <img *ngIf=" profile && profile.photoURL " src="{{ profile.photoURL }}"> Name: {{ profile?.name }}
@@ -25,6 +19,42 @@
   <hr>
   <div class="container">
     <form>
+
+
+
+
+      <div class="form-group row">
+        <label class="col-sm-4" for="profile-phone">Email</label>
+        <div class="col-sm-8">
+          <input id="profile-phone" class="form-control" type="email" name="phone" [(ngModel)]=" phone ">
+          <small class="text-muted">Please input your email.</small>
+        </div>
+      </div>
+
+
+
+      <div class="form-group row">
+        <label class="col-sm-4" for="profile-phone">Password</label>
+        <div class="col-sm-8">
+          <input id="profile-phone" class="form-control" type="password" name="phone" [(ngModel)]=" phone ">
+          <small class="text-muted">Please input your password.</small>
+        </div>
+      </div>
+
+
+
+      <div class="form-group row">
+        <label class="col-sm-4" for="profile-phone">Name</label>
+        <div class="col-sm-8">
+          <input id="profile-phone" class="form-control" type="text" name="name" [(ngModel)]=" phone ">
+          <small class="text-muted">Please input your name.</small>
+        </div>
+      </div>
+
+
+
+
+
       <div class="form-group row">
         <div class="col-sm-4">Gender</div>
         <div class="col-sm-8 form-check">
@@ -52,7 +82,7 @@
         <label class="col-sm-4" for="profile-phone">Phone Number</label>
         <div class="col-sm-8">
           <input id="profile-phone" class="form-control" type="tel" name="phone" [(ngModel)]=" phone ">
-          <small class="text-muted">Please select your phone number.</small>
+          <small class="text-muted">Please input your phone number.</small>
         </div>
       </div>
 
