--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -5,10 +5,20 @@
 <div id="naver_id_login"></div>
 <div *ngIf=" ! app.user.isLogin ">
   <button (click)="onClickLoginWithGoogle()">Google Login</button>
+  <button (click)="onClickLoginWithCordovaGoogle()">Cordova Google Login</button>
   <button (click)="onClickLoginWithFacebook()">Facebook Login</button>
+  <button (click)="onClickLoginWithCordovaFacebook()">Cordova Facebook Login</button>
   <button (click)="onClickLoginWithKakao()">Kakao Login</button>
   <button (click)="onClickLoginWithNaver()">Naver Login</button>
+  <div>
+    <form (ngSubmit)="onSubmitLogin()">
+      <input type="text" name="email" [(ngModel)]="email">
+      <input type="password" name="password" [(ngModel)]="password">
+      <button type="submit">Login</button>
+    </form>
+  </div>
 </div>
+
 
 
 <div *ngIf=" app.user.isLogin && app.user.profile ">
@@ -20,5 +30,3 @@
 <div *ngIf=" app.user.isLogout ">
   * You are not logged in !!
 </div>
-
-
