--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -12,19 +12,34 @@
 </div>
 
 
+{{ app.user.isLogin | json }}
+{{ app.user.profile | json }}
 
-<section *ngIf=" app.user.isLogin && profile " class="profile-content">
+
+<section *ngIf=" app.user.isLogin && app.user.profile " class="profile-content">
 
   <div *ngIf=" error ">{{ error }}</div>
 
 
-  <div *ngIf=" profile ">
-    You have logged in with {{ profile?.providerId }}<br>
-    <img *ngIf=" profile && profile.photoURL " src="{{ profile.photoURL }}"> Name: {{ profile?.name }}
+  <div *ngIf=" app.user.profile ">
+    You have logged in with {{ app.user.profile.providerId }}<br>
+    <img *ngIf=" app.user.profile.photoURL " src="{{ app.user.profile.photoURL }}"><br>
+    Name: {{ app.user.profile.name }}
   </div>
   <hr>
   <div class="container">
     <form>
+
+
+      <div class="form-group row">
+        <label class="col-sm-4" for="profile-name">Name</label>
+        <div class="col-sm-8">
+          <input id="profile-name" class="form-control" type="text" name="name" [(ngModel)]=" name ">
+          <small class="text-muted">Please input your name..</small>
+        </div>
+      </div>
+
+
       <div class="form-group row">
         <div class="col-sm-4">Gender</div>
         <div class="col-sm-8 form-check">
@@ -49,10 +64,10 @@
 
 
       <div class="form-group row">
-        <label class="col-sm-4" for="profile-phone">Phone Number</label>
+        <label class="col-sm-4" for="profile-mobile">Mobile Number</label>
         <div class="col-sm-8">
-          <input id="profile-phone" class="form-control" type="tel" name="phone" [(ngModel)]=" phone ">
-          <small class="text-muted">Please select your phone number.</small>
+          <input id="profile-mobile" class="form-control" type="tel" name="mobile" [(ngModel)]=" mobile ">
+          <small class="text-muted">Please input your mobile phone number.</small>
         </div>
       </div>
 
