update for post list

--- a/src/pages/forum/forum.html
+++ b/src/pages/forum/forum.html
@@ -8,6 +8,7 @@
 
 <hr>
 Select Category:
+<button routerLink="/forum">ALL</button>
 <button routerLink="/forum/abc">ABC</button>
 <button routerLink="/forum/math">Math</button>
 <button routerLink="/forum/music">Music</button>
