--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,8 @@
 
 
   <script>
+
+
     if (window.document.documentMode) {
       // polyfill IE11 in a blocking way
       var s = document.createElement('script');
@@ -37,7 +39,7 @@
       document.head.appendChild(s);
     } else if (!Object.assign) { // If it is not IE,
       // polyfill other non-evergreen browsers in a blocking way
-      var polyfillUrl = "https://cdn.polyfill.io/v2/polyfill.min.js?features=default,Array.prototype.find&flags=gated&unknown=polyfill";
+      var polyfillUrl = "https://cdn.polyfill.io/v2/polyfill.js?features=default,Array.prototype.find&flags=gated&unknown=polyfill";
       // send a blocking XHR to fetch the polyfill
       // then append it to the document so that its eval-ed synchronously
       // this is required because the method used for IE is not reliable with other non-evergreen browsers
@@ -48,6 +50,7 @@
         var code = this.responseText;
         s.appendChild(document.createTextNode(code));
         document.head.appendChild(s);
+        
       });
       xhr.open("GET", polyfillUrl, false);
       xhr.send();
